# jarvis-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  chat.py  pyproject.toml  review_pr.py
app/: answer_check.py  conversation_check.py  invariant_guard.py  orchestrator.py  parsers.py  ports.py  pr_review.py  project_help.py  retrieval_pipeline.py  stage_prompts.py  support_assistant.py  system_prompt.py  task_driver.py  tool_router.py
cli/: ansi.py  config.py  fs_confirm.py  help_commands.py  input_reader.py  invariant_commands.py  know_commands.py  main.py  mcp_commands.py  profile_commands.py  rag_commands.py  review_commands.py  settings_commands.py  spinner.py  support_commands.py  task_commands.py  tool_progress.py  views.py  wm_commands.py
docs/: architecture.md  commands.md  memory-model.md
domain/: invariant.py  knowledge.py  mcp.py  profile.py  retrieval.py  review.py  subtask.py  task.py  working_memory.py
examples/: README.md  fs_agent_demo.py  mcp_live_demo.py  mcp_portfolio_pipeline.py  mcp_smoke.py  mcp_tinvest_demo.py  ollama_bench.py  ollama_bench_jarvis.py  smoke_review.py  support_agent_demo.py  token_budget.py
infra/: deepseek_client.py  faq_retrieval.py  gh.py  gigachat_client.py  invariant_repository.py  knowledge_repository.py  local_fs_client.py  mcp_config_repository.py  mcp_git.py  mcp_http_client.py  mcp_registry.py  mcp_stdio_client.py  ollama_client.py  pr_diff.py  profile_repository.py  query_rewriter.py  rag_retrieval.py  rerankers.py  review_publisher.py  session_repository.py  task_repository.py  ticket_store_client.py  (+1 more)
(+77 files in other folders)
