[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-cli"
version = "0.1.0"
description = "Терминальный чат с GigaChat"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
# RAG-режим: поиск по FAISS-индексу + эмбеддинги. Тяжёлые и опциональные —
# основной рантайм остаётся на одном `requests`.
rag = [
    "faiss-cpu",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["domain*", "app*", "infra*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
